@@ -13,7 +13,6 @@
 
 <div class="update day">
   <% if @contents[:msg] %><div class="msg"><strong><%= @contents[:msg] %></strong></div><% end %>
-  <% if @contents[:freeze_msg] %><div class="msg"><%= @contents[:freeze_msg] %></div><% end %>
   <% if @contents[:body] %><div class="preview"><%= @contents[:body] %></div><% end %>
   <% if @contents[:differ] %><div><%= @contents[:differ] %></div><% end %>
 <div class="form">
